--- a/mallvictoria/mallvictoria/plantillas/busquedas.html
+++ b/mallvictoria/mallvictoria/plantillas/busquedas.html
@@ -48,7 +48,8 @@
 					</div>
 					{%endif%}
 				{% endfor %}					
-				</div>				
+				</div>
+				<div class="spinner"> <img src="{{STATIC_URL}}img/spinner.gif" alt=""> Cargando</div>				
 			</div>									
 		</section>		
 		{% include "base/footer.html" %}	
@@ -61,11 +62,14 @@
 <!-- Scripts -->
 <script src="{{STATIC_URL}}js/mallvictoria.js"></script>
 <script>
+$(".spinner").css("display","none");
 function cargar_lista(){
 	var pagina=parseInt($("#num_pagina").val());
 	var palabra=$("#palabra").val();
 	pagina=pagina+1;
+	$(".spinner").css("display","block");
 	$.post("articulos_busqueda/",{csrfmiddlewaretoken:csrftoken,pagina:pagina,palabra:palabra},function(data){
+		$(".spinner").css("display","none");
 		$("#lista_articulos").append(data);
 	});	
 }	
