--- a/mallvictoria/mallvictoria/plantillas/categoria.html
+++ b/mallvictoria/mallvictoria/plantillas/categoria.html
@@ -55,6 +55,7 @@
 <script>
 $(".spinner").css("display","none");
 function cargar_lista(){
+
 	var pagina=parseInt($("#num_pagina").val());
 	var idcategoria=$("#idcategoria").val();
 	pagina=pagina+1;
@@ -66,7 +67,10 @@ function cargar_lista(){
 }	
 $(window).scroll(function(){
 	if ($(window).scrollTop() == $(document).height() - $(window).height()){
-		cargar_lista();
+		var display=$(".spinner").css("display");
+		if(display=='none'){
+			cargar_lista();
+		}		
 	}
 }); 
 </script>
