--- a/mallvictoria/mallvictoria/plantillas/home.html
+++ b/mallvictoria/mallvictoria/plantillas/home.html
@@ -1,20 +1,7 @@
 <!doctype html>
 <html lang="es">
 <head>
-{% include "base/head.html" %} 
-<style>
-	.spinner{
-		border:1px solid #eee;
-		text-align: center;
-		padding-top: 5px;
-		padding-bottom: 5px;
-		background-color: rgb(250,250,250);
-		margin-bottom: 22px;
-		border-radius: 4px;
-		color: #bbb;
-		width: 100%;
-	}
-</style> 	
+{% include "base/head.html" %} 	
 </head>
 <body>
 
@@ -28,7 +15,7 @@
 			<div class="twelve mobile-four mobile-four columns">
 				<input type="hidden" id="num_pagina" value="0">					
 				<div class="row" id="lista_articulos"></div>	
-				<div class="spinner"> <img src="{{STATIC_URL}}img/spinner.gif" alt=""> Cargando</div>									
+				<div class="spinner"> <img src="{{STATIC_URL}}img/spinner.gif" alt=""> Cargando</div>					
 			</div>
 
 		</section>		
@@ -47,18 +34,21 @@ cargar_lista();
 
 /* Funciones de Scroll */
 function cargar_lista(){
-	var pagina=parseInt($("#num_pagina").val());
-	pagina=pagina+1;
-	$(".spinner").css("display","block");
-	$.post("articulos/",{csrfmiddlewaretoken:$("#token").val(),pagina:pagina},function(data){
-		$(".spinner").css("display","none");
-		$("#lista_articulos").append(data);
-	});	
+		var pagina=parseInt($("#num_pagina").val());
+		pagina=pagina+1;
+		$(".spinner").css("display","block");
+		$.post("articulos/",{csrfmiddlewaretoken:$("#token").val(),pagina:pagina},function(data){
+			$(".spinner").css("display","none");
+			$("#lista_articulos").append(data);
+		});	
 }
 
 $(window).scroll(function(){
 	if ($(window).scrollTop() == $(document).height() - $(window).height()){		
-		cargar_lista();
+		var display=$(".spinner").css("display");
+		if(display=='none'){
+			cargar_lista();
+		}
 	}
 }); 
 /* Fin Funciones de Scroll */
