--- a/mallvictoria/mallvictoria/plantillas/busquedas.html
+++ b/mallvictoria/mallvictoria/plantillas/busquedas.html
@@ -49,7 +49,7 @@
 					{%endif%}
 				{% endfor %}					
 				</div>
-				<div class="spinner"> <img src="{{STATIC_URL}}img/spinner.gif" alt=""> Cargando</div>				
+				<div id="spinner" class="spinner"> <img src="{{STATIC_URL}}img/spinner.gif" alt=""> Cargando</div>		
 			</div>									
 		</section>		
 		{% include "base/footer.html" %}	
@@ -73,13 +73,17 @@ function cargar_lista(){
 		$("#lista_articulos").append(data);
 	});	
 }	
-$(window).scroll(function(){
-	if ($(window).scrollTop() == $(document).height() - $(window).height()){
+var anterior=0;
+$(document).scroll(function(){
+	if ($(document).scrollTop() > $("#spinner").height() ){
 		var display=$(".spinner").css("display");
 		if(display=='none'){
+			if(anterior < $("#spinner").height()){
 			cargar_lista();
-		}
+			}
+		}		
 	}
+	anterior=$(document).scrollTop();
 }); 
 </script>
 </body>
