--- a/mallvictoria/mallvictoria/plantillas/home.html
+++ b/mallvictoria/mallvictoria/plantillas/home.html
@@ -15,7 +15,7 @@
 			<div class="twelve mobile-four mobile-four columns">
 				<input type="hidden" id="num_pagina" value="0">					
 				<div class="row" id="lista_articulos"></div>	
-				<div class="spinner"> <img src="{{STATIC_URL}}img/spinner.gif" alt=""> Cargando</div>					
+				<div id="spinner" class="spinner"> <img src="{{STATIC_URL}}img/spinner.gif" alt=""> Cargando</div>
 			</div>
 
 		</section>		
@@ -42,14 +42,17 @@ function cargar_lista(){
 			$("#lista_articulos").append(data);
 		});	
 }
-
-$(window).scroll(function(){
-	if ($(window).scrollTop() == $(document).height() - $(window).height()){		
+var anterior=0;
+$(document).scroll(function(){
+	if ($(document).scrollTop() > $("#spinner").height() ){
 		var display=$(".spinner").css("display");
 		if(display=='none'){
+			if(anterior < $("#spinner").height()){
 			cargar_lista();
-		}
+			}
+		}		
 	}
+	anterior=$(document).scrollTop();
 }); 
 /* Fin Funciones de Scroll */
 
