--- a/mallvictoria/mallvictoria/plantillas/categoria.html
+++ b/mallvictoria/mallvictoria/plantillas/categoria.html
@@ -68,14 +68,10 @@ function cargar_lista(){
 
 var anterior=0;
 $(document).scroll(function(){
-	if ($(document).scrollTop() > $("#spinner").height() ){
-
+	if ($(document).scrollTop() > $(document).height() - $(window).height() - 1000 ){
 		var display=$(".spinner").css("display");
 		if(display=='none'){
-			console.log($(document).scrollTop() + ">anterior" + anterior+"spinner"+$("#spinner").height());
-			console.log(anterior<$("#spinner").height());
-			if(anterior < $("#spinner").height()){
-			//anterior=$(document).scrollTop();
+			if(anterior < $(document).height() - $(window).height() - 1000 ){
 			cargar_lista();
 			}
 		}		
