--- a/mallvictoria/mallvictoria/plantillas/base/footer.html
+++ b/mallvictoria/mallvictoria/plantillas/base/footer.html
@@ -49,7 +49,7 @@
 	</div>
 
 	<div class=" footer-social">
-		<a href="https://www.facebook.com/pages/Mall-Victoria/502978543101439" target="_blank"><i class="social foundicon-facebook icono"> <span class="texto">Facebook</span></i></a>
+		<a href="https://www.facebook.com/mall.victoria.5" target="_blank"><i class="social foundicon-facebook icono"> <span class="texto">Facebook</span></i></a>
 		<a href="https://twitter.com/mallvictoria" target="_blank"><i class="social foundicon-twitter icono"> <span class="texto">Twitter</span></i></a>
 	</div>					
 </footer>	
