--- a/mallvictoria/mallvictoria/plantillas/base/navbar.html
+++ b/mallvictoria/mallvictoria/plantillas/base/navbar.html
@@ -6,18 +6,16 @@
 						<li class="name">
 							<h1><a href="/" id="title-bar">Mall Victoria</a></h1>
 						</li>						
-						<li class="toggle-topbar"><a href="#"></a></li>
+						<li class="toggle-topbar hide-for-small"><a href="#"></a></li>
 					</ul>					
-					<section>
-					  	<ul class="left">				  		
+					<ul class="left">				  		
 					    <li class="has-dropdown" id="button-nav-bar">
 					      <a href="#">Navegaci&oacute;n</a>
 						    <ul class="dropdown" id="categorias"></ul>
 						</li>
+					</ul>
 
-						</ul>
-
-						<ul class="right">
+					<ul class="right hide-for-small">
 					  		<li class="search">
 							<form id="frmBusqueda" action="/busquedas" method="POST">
 								<input type="hidden" name="csrfmiddlewaretoken">
@@ -35,8 +33,7 @@
 						    	<li><a href="#" id="btnCerrarSession"> <i class="general foundicon-lock"></i> Cerrar</a></li>
 						    </ul>
 						</li>						    
-					  </ul>
-					</section>					
+					</ul>				
 			</nav>
 		</div>
 	</div>
