--- a/mallvictoria/mallvictoria/plantillas/detalle.html
+++ b/mallvictoria/mallvictoria/plantillas/detalle.html
@@ -64,7 +64,7 @@
 						<div class="twelve columns"> 
 							<div class="lista">
 								{% for articulo_relacionado in articulos_relacionados %}
-									<article class="three columns">
+									<article class="three columns mobile-two ">
 										<a href="detalle?idarticulo={{articulo_relacionado.id}}">
 										<div class="articulo-relacionado panel">
 											<img src="{{articulo_relacionado.imagen.thumbnail.url}}" alt="">
