--- a/mallvictoria/mallvictoria/plantillas/base/navbar.html
+++ b/mallvictoria/mallvictoria/plantillas/base/navbar.html
@@ -38,3 +38,11 @@
 		</div>
 	</div>
 </nav>
+<div id="social_buttons" class="hide-for-small">
+	<div>
+		<a href="https://www.facebook.com/mall.victoria.5" target="_blank" class="facebook"><i class="social foundicon-facebook icono"></i></a>
+	</div>		
+	<div>
+	<a href="https://twitter.com/mallvictoria" target="_blank" class="twitter" ><i class="social foundicon-twitter icono"></i></a>
+	</div>
+</div>
