--- a/mallvictoria/mallvictoria/plantillas/base/footer.html
+++ b/mallvictoria/mallvictoria/plantillas/base/footer.html
@@ -17,15 +17,15 @@
 		border-bottom: 1px solid #777;
 	}
 </style>
-<footer class="hide-for-small">
-	<div class="footer-head">
+<footer>
+	<div class="footer-head hide-for-small">
 		<div class="shadow-left"></div>
 		<div class="shadow-right"></div>
 		<div class="twelve columns bottom-green">
 			<h3 id="regresar_top">Regresar al top</h3>
 		</div>
 	</div>
-	<div class=" footer-contenido">
+	<div class="footer-contenido">
 		<div class="row footer-columns">
 			<div class="two columns">
 				<h4>Navegaci&oacute;n</h4>
@@ -41,7 +41,7 @@
 			</div>
 			<div class="four columns"></div>
 
-			<div class="four columns">
+			<div class="four columns hide-for-small hide-for-medium">
 				<h4>Acerca de ...</h4>
 				<p>Mall Victoria es un sitio donde podr&aacute;s publicar art&iacute;culos completamente gratis,Tienes 3 espacios que puedes utilizar para postear cualquier art&iacute;culo o servicio que quieras promocionar. Cada espacio tendra una duraci&oacute;n de 15 d&iacute;as.</p>
 			</div>
