--- a/mallvictoria/mallvictoria/plantillas/base/frmregistro.html
+++ b/mallvictoria/mallvictoria/plantillas/base/frmregistro.html
@@ -11,7 +11,7 @@
 			<a href="#" class="button success" id="btnLogin">Entrar</a>	<a href="/registro">No tengo cuenta y deseo registrar me</a>
 		</form>
 	</fieldset>
-	<div id="msgLogin"></div>
+	<div class="msgLogin"></div>
   <a class="close-reveal-modal">&#215;</a>
 </div>
 
