--- a/mallvictoria/mallvictoria/plantillas/base/scripts.html
+++ b/mallvictoria/mallvictoria/plantillas/base/scripts.html
@@ -1,3 +1,4 @@
 <script src="{{STATIC_URL}}foundation/javascripts/modernizr.foundation.js"></script>		
 <script src="{{STATIC_URL}}foundation/javascripts/jquery.js"></script>
 <script src="{{STATIC_URL}}foundation/javascripts/foundation.min.js"></script>
+<script src="{{STATIC_URL}}foundation/javascripts/app.js"></script>
