--- a/mallvictoria/mallvictoria/plantillas/administracion/locker.html
+++ b/mallvictoria/mallvictoria/plantillas/administracion/locker.html
@@ -32,10 +32,10 @@
 							<div class="row">
 							  <div class="twelve columns">
 							    <div class="row collapse">
-							      <div class="two columns">
+							      <div class="two columns mobile-one">
 							        <span style="height: 28px;line-height: 25px;" class="prefix">$</span>
 							      </div>
-							      <div class="ten columns">
+							      <div class="ten columns mobile-three">
 							        {{formulario.costo}}
 							      </div>
 							    </div>
@@ -43,11 +43,11 @@
 							</div>
 						</div>
 
-						<div class="four columns">
+						<div class="four columns mobile-four">
 								<label for="tipo">Tipo:</label>
 								{{formulario.tipo}}														
 						</div>
-						<div class="four columns">
+						<div class="four columns mobile-four">
 							<label for="categoria">Categoria:</label>
 								{{formulario.categoria}}											
 						</div>
